--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,17 @@ body, html {
   font-family: Arial, sans-serif;
 }
 
+button {
+  padding: 10px;
+  background-color: #007bff;
+  color: #007bff;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
 .container {
   max-width: 400px;
   width: 100%;
@@ -37,7 +48,7 @@ form label {
   top: -15px;
   left: 0;
   font-size: 12px;
-  color: #f13a3a;
+  color: #004b69;
   /* transition: all 0.2s; */
 }
 
@@ -45,7 +56,7 @@ form input, form select {
   width: 100%;
   padding: 10px;
   font-size: 14px;
-  border: 1px solid #ccc;
+  border: 1px solid #004b69;
   border-radius: 5px;
 }
 
